force-app/main/default/objects/School__c/fields/Computer_Lab__c.field-meta.xml
<CustomField>
    <fullName>Computer_Lab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Computer Lab</label>
    <type>Checkbox</type>
</CustomField>