force-app/main/default/objects/School__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>