force-app/main/default/objects/School__c/fields/Staff_Strength__c.field-meta.xml
<CustomField>
    <fullName>Staff_Strength__c</fullName>
    <label>Staff Strength</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>