force-app/main/default/objects/School__c/fields/Uniform_Color__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Color__c</fullName>
    <label>Uniform Color</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Khaki</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>