force-app/main/default/objects/School__c/validationRules/Phone_Limit_Exceeded.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Limit_Exceeded</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Phone_No__c) &gt; 13  || 
LEN(Phone_No__c) &lt;10</errorConditionFormula>
    <errorMessage>Phone No is invalid.</errorMessage>
</ValidationRule>