force-app/main/default/objects/School__c/listViews/All_Schools.listView-meta.xml
<ListView>
    <fullName>All_Schools</fullName>
    <columns>NAME</columns>
    <columns>Uniform_Color__c</columns>
    <columns>Staff_Strength__c</columns>
    <columns>Phone_No__c</columns>
    <columns>Email__c</columns>
    <columns>Fee__c</columns>
    <columns>Computer_Lab__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Schools</label>
</ListView>